修改了middleware.py 增加了搜索功能

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -38,7 +38,7 @@
 	</div>
 
 	<div class="goods_detail_con clearfix">
-		<div class="goods_detail_pic fl"><img src="/static/images/goods_detail.jpg"></div>
+		<div class="goods_detail_pic fl"><img src="/media/{{ goods.goods_front_image }}"></div>
 
 		<div class="goods_detail_list fr">
 			<h3>{{ goods.name }}</h3>
