--- a/templates/base_main.html
+++ b/templates/base_main.html
@@ -54,10 +54,12 @@
     {% block search %}
         <div class="search_bar clearfix">
             <a href="{% url 'goods:index' %}" class="logo fl"><img src="/static/images/logo.png"></a>
+            <form action="{% url 'goods:search' %}" method="get">
             <div class="search_con fl">
-                <input type="text" class="input_text fl" name="" placeholder="搜索商品">
-                <input type="button" class="input_btn fr" name="" value="搜索">
+                <input type="text" class="input_text fl" name="search" placeholder="搜索商品">
+                <input type="submit" class="input_btn fr" name="" value="搜索">
             </div>
+            </form>
             <div class="guest_cart fr">
                 <a href="{% url 'carts:cart' %}" class="cart_name fl">我的购物车</a>
                 <div class="goods_count fl" id="show_count">0</div>
