--- a/templates/user_center_info.html
+++ b/templates/user_center_info.html
@@ -6,10 +6,12 @@
 	<div class="search_bar clearfix">
 		<a href="{% url 'goods:index' %}" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;用户中心</div>
-		<div class="search_con fr">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
-		</div>		
+		 <form action="{% url 'goods:search' %}" method="get">
+            <div class="search_con fl">
+                <input type="text" class="input_text fl" name="search" placeholder="搜索商品">
+                <input type="submit" class="input_btn fr" name="" value="搜索">
+            </div>
+		 </form>
 	</div>
 	{% endblock %}
 
